--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -19,7 +19,7 @@ body {
   background: #fff; }
 
 .herder_img .wapper_baner .img_baner {
-  background-image: url("https://cdn.glitch.com/bb34c2fb-ff89-4b9e-8b3f-34d4d2810d22%2FBangPhong.png?v=1586744256020");
+  background-image: url("../.././img/BangPhong1.png");
   width: 100%;
   height: 200px;
   background-size: cover; }
@@ -39,8 +39,11 @@ body {
 	  }
 	  span{
 	  	font-size: 20px;
-	  	padding: 0 20px;
+	  	padding: 13px 20px;
 	  	font-weight: 600;
+	  	a{
+	  		color: #b6b6b6;
+	  	}
 	  }
   }
  
@@ -349,6 +352,17 @@ body {
 	    border-radius: 3px 0px;
 	  }
 }
+.waper_foter_end{
+	width: 100%;
+	height: 170px;
+	background: #393a3e;
+	margin-top:20px;
+	.lay1{
+		width: 100%;
+		height: 40px;
+		background: #2e2e32;
+	} 
+}
 .wapper_conten_xephang:hover:before {
 	  content: "";
 	  background: rgba(0, 0, 0, 0.5);
@@ -376,14 +390,21 @@ body {
 			}
 		}
 	}
-	.go_logo{
-		span{
-			color: #b6b6b6;
-			font-size: 15px;
+	.wapper_header {
+		.go_logo{
+			span{
+				color: #b6b6b6;
+				font-size: 15px;
+			}
+			span{
+			  	padding: 13px 20px;
+			  	font-weight: 600;
+			  	
+			  }
 		}
 	}
 	.herder_img .wapper_baner .img_baner {
-		background-image: url("https://cdn.glitch.com/facd9db4-77fe-4f7f-aaaf-98ab2956acb6%2FBangPhong.png?v=1587273184202");
+		background-image: url("../.././img/BangPhong.png");
 		}
 	.owl-next{
 		display: none;
@@ -431,6 +452,7 @@ body {
 			}
 			p{
 				left: 31%;
+				width: 50%;
 				background: #141414
 			}
 			b{
