--- a/views/pageConGai/ConGaiPage.pug
+++ b/views/pageConGai/ConGaiPage.pug
@@ -37,9 +37,9 @@ block conten
 		.waper_xephang
 			.row.custom_row
 				.go_logo
-					i.fab.fa-hotjar
-					span Bang xep hang
-				each posts in homeXephang.reverse()
+					i(style="color:red").fas.fa-fish
+					span Con gai thich
+				each posts in homeConGai
 					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
 						a(href=`/post/xephang/${posts.id}`)
 							.wapper_conten_xephang
