--- a/public/style/pageView.css
+++ b/public/style/pageView.css
@@ -23,6 +23,9 @@
     .custom_col{
         padding: 0 !important;
     }
+    .conten_img_view img {
+        opacity: 0.7;
+    }
 }
 .not{
 	display:none !important;
