--- a/public/style/pageChap.css
+++ b/public/style/pageChap.css
@@ -6,6 +6,23 @@ body{
 .not{
 	display:none !important;
 }
+
+@media (max-width: 768px) {
+    body{
+        background:#141414 !important;
+    }
+    .herder_img .wapper_baner .img_baner {
+        background-image: url("../.././img/BangPhong.png");
+    }
+    .conten_treck{
+        background-image: linear-gradient( to left, transparent, rgba(0, 0, 0, 0.71) 40%, #000 );
+        width: 144px;
+        height: 100%;
+        top: 0;
+        position: absolute;
+    }
+}
+
 .loader {
     width: 50px;
     height: 50px;
@@ -31,7 +48,7 @@ body{
     background: $hover_;
 }
 
-.loader-black { background-color: #333; }
+.loader-black { background-color: #a2b8b1; }
 
 .rendChap{
     justify-content: space-around;
