--- a/views/pageConGai/ConGaiPage.pug
+++ b/views/pageConGai/ConGaiPage.pug
@@ -41,7 +41,7 @@ block conten
 					span Con gai thich
 				each posts in homeConGai
 					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
-						a(href=`/post/xephang/${posts.id}`)
+						a(href=`/post/congai/${posts.id}`)
 							.wapper_conten_xephang
 								.should
 									img(src=posts.imageHome)
