--- a/views/pagePost/PostPage.pug
+++ b/views/pagePost/PostPage.pug
@@ -45,7 +45,7 @@ block conten
 							.wapper_conten_xephang
 								.should
 									img(src=posts.imageHome)
-									p(style="width:50%")=posts.nameHome
+									p=posts.nameHome
 										b=posts.chapHome
 
 										
