--- a/views/pageViewXepHang/ViewXepHangPage.pug
+++ b/views/pageViewXepHang/ViewXepHangPage.pug
@@ -73,7 +73,7 @@ block conten
 										hr
 										.wapper_chap
 											each posts in viewsXepHang
-												a(href=`/post/chap/${posts._id}`)
+												a(href=`/post/chapxephang/${posts._id}`)
 													p(class=posts.chapter === "Chapter 369" || posts.chapter === "Chapter 517" || posts.chapter === "Chapter 229" || posts.chapter === "Chapter 499" || posts.chapter === "Chapter 453" || posts.chapter === "Chapter 493" || posts.chapter === "Chapter 500" || posts.chapter === "Chapter 519" || posts.chapter === "Chapter 371" ? "display" : "")=posts.chapter
 	//- title=posts.nameView
 	script.
