--- a/views/pageViewChapXephang/ViewChapXephangPage.pug
+++ b/views/pageViewChapXephang/ViewChapXephangPage.pug
@@ -60,7 +60,7 @@ block conten
 							.row
 								.col-12
 									.rendChap
-										a(href=`/post/chap/${_id -1 }`)
+										a(href=`/post/chapxephang/${_id -1 }`)
 											i.fas.fa-arrow-left &nbsp; Chap truoc
 										a.fas(href=`/post/chapxephang/${parseInt(_id) +1}`) Chap sau 
 											i.fas.fa-arrow-right
