--- a/views/pageViewChapConGai/ViewChapConGaiPage.pug
+++ b/views/pageViewChapConGai/ViewChapConGaiPage.pug
@@ -60,9 +60,9 @@ block conten
 							.row
 								.col-12
 									.rendChap
-										a(href=`/post/chap/${_id -1 }`)
+										a(href=`/post/chapcongai/${_id -1 }`)
 											i.fas.fa-arrow-left &nbsp; Chap truoc
-										a.fas(href=`/post/chapxephang/${parseInt(_id) +1}`) Chap sau 
+										a.fas(href=`/post/chapcongai/${parseInt(_id) +1}`) Chap sau 
 											i.fas.fa-arrow-right
 								
 	//- title=posts.nameView
