--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -309,7 +309,7 @@ body {
 	  	padding: 35px 19px;
 	  	width: 100%;
 	  	i{
-		  	color: red;
+		  	color: #a2b8b1;
 		  	font-size: 32px;
 		  }
 		  span{
@@ -355,13 +355,23 @@ body {
 .waper_foter_end{
 	width: 100%;
 	height: 170px;
-	background: #141414;
 	margin-top:20px;
 	
 }
 .lay1{
     width: 100%;
-    height: 40px;
+    height: 50px;
+    background: #353535;
+    color: #a2b8b1;
+    text-align: center;
+    p{
+      text-transform: uppercase;
+      line-height: 50px;
+      font-size: 10px;
+      font-weight: 600;
+      letter-spacing: 1px;
+      margin: 0;
+    }
   } 
 .wapper_conten_xephang:hover:before {
 	  content: "";
