--- a/views/pagePost/PostPage.pug
+++ b/views/pagePost/PostPage.pug
@@ -38,7 +38,7 @@ block conten
 			.row.custom_row
 				.go_logo
 					i(style="color:#a2b8b1").fab.fa-neos
-					span Moi cap nhat
+					span Mới cập nhật
 				each posts in db
 					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
 						a(href=`/post/${posts.id}`)
