--- a/views/pageViewXepHang/ViewXepHangPage.pug
+++ b/views/pageViewXepHang/ViewXepHangPage.pug
@@ -74,8 +74,7 @@ block conten
 										.wapper_chap
 											each posts in viewsXepHang
 												a(href=`/post/chapxephang/${posts._id}`)
-													p(class=posts.chapter === "Chapter 369" || posts.chapter === "Chapter 517" || posts.chapter === "Chapter 229" || posts.chapter === "Chapter 499" || posts.chapter === "Chapter 453" || posts.chapter === "Chapter 493" || posts.chapter === "Chapter 500" || posts.chapter === "Chapter 519" || posts.chapter === "Chapter 371" ? "display" : "")=posts.chapter
-	//- title=posts.nameView
+													p(class=posts.chapter === "Chapter 521" || posts.chapter === "Chapter 453" || posts.chapter === "Chapter 372" || posts.chapter === "Chapter 229" || posts.chapter === "Chapter 500" ? "display" : "")=posts.chapter
 	script.
 		function showMeau(){
 			var show = document.getElementById("showMeau")
