--- a/views/pageConGai/ConGaiPage.pug
+++ b/views/pageConGai/ConGaiPage.pug
@@ -38,7 +38,7 @@ block conten
 			.row.custom_row
 				.go_logo
 					i(style="color:red").fas.fa-fish
-					span Con gai thich
+					span Con gái thích
 				each posts in homeConGai
 					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
 						a(href=`/post/congai/${posts.id}`)
