--- a/views/pageXepHang/XepHangPage.pug
+++ b/views/pageXepHang/XepHangPage.pug
@@ -38,7 +38,7 @@ block conten
 			.row.custom_row
 				.go_logo
 					i.fab.fa-hotjar
-					span Bang xep hang
+					span Bảng xếp hạng
 				each posts in homeXephang.reverse()
 					div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
 						a(href=`/post/xephang/${posts.id}`)
