--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -11,7 +11,9 @@ body {
   margin: auto;
   transition: 0.2s;
   padding-left: 20px;
-  padding-right: 20px; }
+  padding-right: 20px;
+  padding-top: 49px;
+   }
 
 .herder_img .wapper_baner {
   width: 100%;
@@ -51,7 +53,7 @@ body {
 
 .wapper_meau {
   text-align: center;
-  margin: 20px 0; }
+   }
 
 .wapper_meau .meau_nav {
   display: inline-block; }
@@ -59,12 +61,16 @@ body {
 .wapper_meau .meau_nav ul li {
   list-style: none;
   float: left;
-  padding: 20px; }
+  padding: 12px 40px; }
 
 .wapper_meau .meau_nav ul li a {
   text-decoration: none;
-  color: #a2b8b1;
-  font-weight: 400; }
+  color: #000;
+  font-weight: 400;
+    &:hover{
+        color: #a2b8b1;
+    }
+}
 
 .meau_mobi {
   display: none; }
@@ -90,7 +96,7 @@ body {
     display: none; }
 
   .meau_mobi {
-    padding: 22px;
+    padding: 15px;
     position: absolute;
     display: block; }
 
@@ -381,7 +387,12 @@ body {
 	  width: 100%;
 	  z-index: 1;
 	}
-
+.nav_bar_menu{
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    border-bottom: 1px solid #a2b8b1;
+}
 @include responsive_sm{
 
 }
@@ -392,6 +403,10 @@ body {
 			background: #141414 !important;
 		}
 	}
+    .nav_bar_menu{
+        background: #000;
+        border-bottom: 1px solid #a2b8b1;
+    }
   .loader-1 {
     left: 31% !important;
   }
