--- a/public/style/pageView.css
+++ b/public/style/pageView.css
@@ -4,8 +4,26 @@
     background:#f7f9fb !important;
 }
 
-
+.btn{
+    background: #ff2853 !important;
+    color: #fff !important;
+    height: 2.641rem;
+    border-radius: 1.321rem !important;
+    text-align: center;
+    width: 12.005rem;
+    cursor: pointer !important;
+    margin-right: 1.2rem;
+}
+.nav_bar_menu{
+    width: 100%;
+    height: 50px;
+    background: #fff;
+    border-bottom: 1px solid #a2b8b1;
+}
 @media (max-width: 768px) {
+    .nav_bar_menu{
+        background: #000;
+    }
     .container-fluid, body{
         background:#141414 !important;
         color: #909090;
@@ -26,7 +44,15 @@
     .conten_img_view img {
         opacity: 0.7;
     }
+    .loader-1 {
+    left: 32% !important;
+    }
 }
+
+
+
+
+
 .not{
 	display:none !important;
 }
@@ -58,7 +84,7 @@
 .loader-black { background-color: #a2b8b1; }
 
 .loader-1 { animation-name: loader1; top: 40%;
-    left: 31%;
+    left: 44%;
     position: absolute; }
 @keyframes loader1 {
     from { transform: scale(0); opacity: 1; }
