--- a/views/pageView/viewPage.pug
+++ b/views/pageView/viewPage.pug
@@ -3,21 +3,32 @@ extends ../layOut/viewComeon
 
 block conten
 	.loader.loader-black.loader-1(id="fixeds")
-	.meau_mobi(id="showMeau")
-		i.fas.fa-ellipsis-v
 	.show_meau(id="mobie_on")
 		i.fas.fa-times
 		ul
 			li 
-				a(href="") Home
+				a(href="/") Trang Chủ
 			li 
-				a(href="") Active
+				a(href="/bangxephang") Bảng xếp hạng
 			li 
-				a(href="") Help
+				a(href="/congai") Con gái thích
 			li 
-				a(href="") Goo
+				a(href="/addTemview") Theo dõi
 	.wapper_home.not(id="fixed")
-	
+		.nav_bar_menu.fixed-top
+			.meau_mobi(id="showMeau")
+				i.fas.fa-ellipsis-v
+			.wapper_meau
+				.meau_nav
+					ul
+						li 
+							a(href="/") Trang Chủ
+						li 
+							a(href="/bangxephang") Bảng xếp hạng
+						li 
+							a(href="/congai") Con gái thích
+						li 
+							a(href="/addTemview") Theo dõi
 		.herder_img
 			.wapper_baner
 				.img_baner
@@ -61,6 +72,10 @@ block conten
 											p 
 												i.fas.fa-tags  The loai :  
 													span(style="color:#a2b8b1; font-style:italic")=posts.theLoai
+											.btns
+												a.btn(href=`/post/chap/${1}`) Xem
+												a.btn(href="/addTemview") Theo dõi
+
 								.row(class=posts.id === id ? "" : "display")
 									div.col-12.col-sm-12.col-md-12.col-lg-12.col-xl-12
 										br
@@ -96,6 +111,10 @@ block conten
 				fixed.classList.remove('of')
 			}
 		}
+		//- function temview(){
+		//- 	var value = document.getElementById("value").value
+		//- 	console.log(id)
+		//- }
 		function reload(){
 			if(
 				getStorage('loaded') == '' 
