--- a/views/pageConGai/ConGaiPage.pug
+++ b/views/pageConGai/ConGaiPage.pug
@@ -15,7 +15,7 @@ block conten
 				a(href="") Help
 			li 
 				a(href="") Goo
-	.wapper_home.not(id="fixed")
+	.wapper_home.not(id="fixed" style="opacity: 0; transition: 0.5s;")
 	
 		.herder_img
 			.wapper_baner
@@ -59,6 +59,7 @@ block conten
 				show.addEventListener("click", showMeaus)
 				meauOn.addEventListener("click", closeMeau)
 				setTimeout(function(){ fixed.classList.remove('not') }, 1000);
+				setTimeout(function(){ fixed.classList.add('nots') }, 2500);
 				setTimeout(function(){ fixeds.classList.add('not') }, 1000);
 
 				function showMeaus(){
