--- a/public/style/Layout/_home.scss
+++ b/public/style/Layout/_home.scss
@@ -393,6 +393,9 @@ body {
     background: #fff;
     border-bottom: 1px solid #a2b8b1;
 }
+.nots{
+    opacity:1 !important;
+}
 @include responsive_sm{
 
 }
