--- a/views/pageHome/homePage.pug
+++ b/views/pageHome/homePage.pug
@@ -14,6 +14,9 @@ block conten
 				a(href="/congai") Con gái thích
 			li 
 				a(href="") Theo dõi
+			li 
+				a(href="/search")
+					i.fas.fa-search
 	.wapper_home.not(id="fixed" style="opacity: 0; transition: 0.5s;")
 		.nav_bar_menu.fixed-top
 			.meau_mobi(id="showMeau")
@@ -29,6 +32,9 @@ block conten
 							a(href="/congai") Con gái thích
 						li 
 							a(href="") Theo dõi
+						li 
+							a(href="/search")
+								i.fas.fa-search
 		.herder_img
 			.wapper_baner
 				.img_baner
