--- a/views/pageSearch/SearchPage.pug
+++ b/views/pageSearch/SearchPage.pug
@@ -1,23 +1,34 @@
 
-extends ../layOut/viewComeon
+extends ../layOut/homeComeon
 
 block conten
 	.loader.loader-black.loader-1(id="fixeds")
-	.meau_mobi(id="showMeau")
-		i.fas.fa-ellipsis-v
 	.show_meau(id="mobie_on")
 		i.fas.fa-times
 		ul
 			li 
-				a(href="") Home
+				a(href="/") Trang Chủ
 			li 
-				a(href="") Active
+				a(href="/bangxephang") Bảng xếp hạng
 			li 
-				a(href="") Help
+				a(href="/congai") Con gái thích
 			li 
-				a(href="") Goo
+				a(href="/addTemview") Theo dõi
 	.wapper_home.not(id="fixed")
-	
+		.nav_bar_menu.fixed-top
+			.meau_mobi(id="showMeau")
+				i.fas.fa-ellipsis-v
+			.wapper_meau
+				.meau_nav
+					ul
+						li 
+							a(href="/") Trang Chủ
+						li 
+							a(href="/bangxephang") Bảng xếp hạng
+						li 
+							a(href="/congai") Con gái thích
+						li 
+							a(href="/addTemview") Theo dõi
 		.herder_img
 			.wapper_baner
 				.img_baner
@@ -41,7 +52,17 @@ block conten
 				.row
 					.col-12
 						.wapper_conten
-							input
+							form.search-wrapper.cf(active="/search". method="GET")
+								input(type="text", name="q")
+								button search
+							each post in posts
+								div.col-xs-12.col-sm-12.col-md-3.col-lg-3.col-12-custom
+									a(href=`/search/zon/${post._id}`)
+										.wapper_conten_xephang
+											.should
+												img(src=post.imageHome)
+												p=post.nameHome
+													b=post.chapHome
 							
 	//- title=posts.nameView
 	script.
