--- a/views/pageSearch/SearchPage.pug
+++ b/views/pageSearch/SearchPage.pug
@@ -14,7 +14,7 @@ block conten
 				a(href="/congai") Con gái thích
 			li 
 				a(href="/addTemview") Theo dõi
-	.wapper_home.not(id="fixed")
+	.wapper_home.not(id="fixed" style="opacity: 0; transition: 0.5s;")
 		.nav_bar_menu.fixed-top
 			.meau_mobi(id="showMeau")
 				i.fas.fa-ellipsis-v
@@ -32,17 +32,6 @@ block conten
 		.herder_img
 			.wapper_baner
 				.img_baner
-		.wapper_meau
-			.meau_nav
-				ul
-					li 
-						a(href="") Home
-					li 
-						a(href="") Active
-					li 
-						a(href="") Help
-					li 
-						a(href="") Goo
 		.container-fluid.custom_col
 			.row
 				.col-12
@@ -74,6 +63,7 @@ block conten
 			show.addEventListener("click", showMeaus)
 			meauOn.addEventListener("click", closeMeau)
 			setTimeout(function(){ fixed.classList.remove('not') }, 1000);
+			setTimeout(function(){ fixed.classList.add('nots') }, 2500);
 			setTimeout(function(){ fixeds.classList.add('not') }, 1000);
 			function showMeaus(){
 				console.log("hh")
