--- a/views/pageViewConGai/ViewConGaiPage.pug
+++ b/views/pageViewConGai/ViewConGaiPage.pug
@@ -3,35 +3,35 @@ extends ../layOut/viewComeon
 
 block conten
 	.loader.loader-black.loader-1(id="fixeds")
-	.meau_mobi(id="showMeau")
-		i.fas.fa-ellipsis-v
 	.show_meau(id="mobie_on")
 		i.fas.fa-times
 		ul
 			li 
-				a(href="") Home
+				a(href="/") Trang Chủ
 			li 
-				a(href="") Active
+				a(href="/bangxephang") Bảng xếp hạng
 			li 
-				a(href="") Help
+				a(href="/congai") Con gái thích
 			li 
-				a(href="") Goo
+				a(href="/addTemview") Theo dõi
 	.wapper_home.not(id="fixed" style="opacity: 0; transition: 0.5s;")
-	
+		.nav_bar_menu.fixed-top
+			.meau_mobi(id="showMeau")
+				i.fas.fa-ellipsis-v
+			.wapper_meau
+				.meau_nav
+					ul
+						li 
+							a(href="/") Trang Chủ
+						li 
+							a(href="/bangxephang") Bảng xếp hạng
+						li 
+							a(href="/congai") Con gái thích
+						li 
+							a(href="/addTemview") Theo dõi
 		.herder_img
 			.wapper_baner
 				.img_baner
-		.wapper_meau
-			.meau_nav
-				ul
-					li 
-						a(href="") Home
-					li 
-						a(href="") Active
-					li 
-						a(href="") Help
-					li 
-						a(href="") Goo
 		.container-fluid.custom_col
 			.row
 				.col-12
