--- a/views/pageViewSearch/viewPageSearch.pug
+++ b/views/pageViewSearch/viewPageSearch.pug
@@ -134,6 +134,7 @@ block conten
 			function getStorage(name){
 				return sessionStorage.getItem(name) || '';
 			}
-			setTimeout(reload, 100);
+			//- setTimeout(reload, 100);
+			reload();
 
 
