--- a/views/pageConGai/ConGaiPage.pug
+++ b/views/pageConGai/ConGaiPage.pug
@@ -16,7 +16,7 @@ block conten
 			li 
 				a(href="/search")
 					i.fas.fa-search
-	.wapper_home.not(id="fixed" style="opacity: 0; transition: 0.5s;")
+	.wapper_home.not(id="fixed")
 		.nav_bar_menu.fixed-top
 			.meau_mobi(id="showMeau")
 				i.fas.fa-ellipsis-v
@@ -65,7 +65,6 @@ block conten
 				show.addEventListener("click", showMeaus)
 				meauOn.addEventListener("click", closeMeau)
 				setTimeout(function(){ fixed.classList.remove('not') }, 1000);
-				setTimeout(function(){ fixed.classList.add('nots') }, 2500);
 				setTimeout(function(){ fixeds.classList.add('not') }, 1000);
 
 				function showMeaus(){
@@ -79,24 +78,3 @@ block conten
 				}
 			}
 			showMeau();
-			function reload(){
-				if(
-					getStorage('loaded') == '' 
-					|| getStorage('loaded') == '0'
-				){
-					setStorage('loaded', '1');
-					window.location.reload();
-					return true;
-				}else{
-					setStorage('loaded', '0');
-					return true;
-				}
-			}
-			function setStorage(name, value){
-				return sessionStorage.setItem(name, value);
-			}
-			function getStorage(name){
-				return sessionStorage.getItem(name) || '';
-			}
-			showMeau();
-			setTimeout(reload, 500);
